grafana and k6 performance tests added